[metadata]
name = nvdpie
version = 0.1.0
description = A Python package for working with the NVD REST API.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    pydantic

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nvdpie = nvdpie.main:main
